# kiwi

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  USAGE.md
.github/workflows/: build-deploy.yaml  test.yaml
.github/workflows/composite/: test.yaml
backend/: Cargo.toml  README.md
backend/migrations/: 20250603221731_users.sql  V0001__users.sql  V0002__users_unique_username.sql  V0003__user_roles_and_invitations.sql  V0004__services.sql  V0004_services.sql  V0005__service_github_repository.sql  V0006__multidimensional_arrays.sql  V0007__services_required_role.sql  V0008__services_image_name_optional.sql
backend/src/: constants.rs  error.rs  extractors.rs  main.rs  middleware.rs  models.rs  server.rs  settings.rs  state.rs  worker.rs
backend/src/managers/: crypto.rs  dev_frontend.rs  local_http.rs  mod.rs
backend/src/managers/container/: constants.rs  error.rs  mod.rs  models.rs
backend/src/managers/crypto/: error.rs  mod.rs
backend/src/managers/db/: constants.rs  error.rs  mod.rs  models.rs  queries.rs
backend/src/managers/db/queries/: service.rs  user.rs
backend/src/managers/dev_frontend/: error.rs  mod.rs
backend/src/managers/dynamic_dns/: error.rs  mod.rs  models.rs
backend/src/managers/lets_encrypt/: error.rs  mod.rs  models.rs
backend/src/managers/oidc/: error.rs  mod.rs  models.rs
backend/src/managers/redis/: constants.rs  error.rs  mod.rs  models.rs  queries.rs
backend/src/managers/secrets/: error.rs  mod.rs  models.rs
backend/src/middlewares/: authentication.rs  mod.rs  subdomain.rs
backend/src/routes/: auth.rs  error.rs  mod.rs
backend/src/routes/admin/: mod.rs
backend/src/routes/admin/api/: mod.rs  models.rs
backend/src/routes/admin/api/certificates/: error.rs  mod.rs  models.rs
backend/src/routes/admin/api/dynamic_dns/: mod.rs  models.rs
backend/src/routes/admin/api/services/: error.rs  mod.rs  models.rs
backend/src/routes/admin/api/users/: error.rs  mod.rs  models.rs
backend/src/routes/auth/: mod.rs  models.rs
backend/src/routes/auth/api/: constants.rs  error.rs  mod.rs  models.rs
backend/src/routes/ci/: mod.rs
backend/src/routes/ci/api/: error.rs  mod.rs  models.rs
backend/src/routes/status/: api.rs
ci/: action.yaml
web/: README.md  biome.json  eslint.config.js  index.html  package.json  panda.config copy.ts  panda.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: app.tsx  main.tsx
web/src/components/: avatar.tsx  card.tsx  checkbox.tsx  clipboard.tsx  dialog.tsx  field.tsx  index.tsx  menu.tsx  navigationBar.tsx  radioGroup.tsx  select.tsx  table.tsx  toast.tsx
web/src/contexts/: router.tsx
web/src/hooks/: createAsyncAction.ts  createBackendClient.ts  createCredentialsClient.ts  (+1 more)
(+33 files in other folders)
